--- a/apps/box-office/styles/Home.module.css
+++ b/apps/box-office/styles/Home.module.css
@@ -2,7 +2,6 @@
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
 }
@@ -81,13 +80,13 @@
 .card {
   margin: 1rem;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+  width: 80%;
 }
 
 .card:hover,
