--- a/apps/sso/styles/globals.scss
+++ b/apps/sso/styles/globals.scss
@@ -14,6 +14,9 @@
 @import "styles/pages";
 @import "styles/phone";
 
+// Plugins
+@import '~@icon-park/react/styles/index.css';
+
 @font-face {
   font-family: MDPrimer;
   font-weight: 300;
