--- a/apps/sso/styles/components.scss
+++ b/apps/sso/styles/components.scss
@@ -75,10 +75,10 @@
 
 // Toggle tab
 .toggle-tab {
-  @apply inline-flex bg-gray-100 rounded-xl p-1;
+  @apply inline-flex bg-gray-100 rounded-full p-1;
 }
 .toggle-tab-item {
-  @apply px-2 py-1 font-medium rounded-lg cursor-pointer transition duration-100;
+  @apply px-2 py-2 text-sm font-medium rounded-full cursor-pointer transition duration-100;
   &:not(.active):hover {
     @apply text-rose-500;
   }
