--- a/apps/sso/styles/pages.scss
+++ b/apps/sso/styles/pages.scss
@@ -1,15 +1,49 @@
 // ========================================
 // Login page
 // ========================================
+@keyframes fade-in-up {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes fade-background {
+  0% {
+    background-color: rgba(40,41,44,0);
+  }
+  100% {
+    background-color: rgba(40,41,44,0.9);
+  }
+}
+.fade-in-up {
+  animation-duration: .5s;
+  animation-fill-mode: both;
+  animation-name: fade-in-up;
+  //animation-delay: .4s;
+  animation-timing-function: cubic-bezier(.4,0,.38,1.46);
+}
+.fade-background {
+  animation-duration: .4s;
+  animation-fill-mode: both;
+  animation-name: fade-background;
+  animation-timing-function: cubic-bezier(.645,.045,.355,1);
+}
 .login-bg {
   @apply fixed inset-0 flex items-center justify-center;
   background-color: rgba(40, 41, 44, 0.9);
   z-index: 100;
 }
 .login-container {
-  @apply flex flex-col bg-white rounded-2xl;
+  @apply relative flex flex-col bg-white rounded-2xl;
   width: calc(100% - 40px);
   min-height: 600px;
   max-width: 500px;
   padding: 40px 30px 30px;
+}
+.login-close {
+  @apply absolute right-3 top-3 flex items-center justify-center w-10 h-10 text-gray-500 rounded-full transition cursor-pointer hover:bg-gray-100 hover:text-gray-700 active:bg-gray-200;
 }
