--- a/apps/sso/styles/public.scss
+++ b/apps/sso/styles/public.scss
@@ -1,3 +1,6 @@
+.black-title {
+  font-family: proximanova, 'Helvetica Neue', 'PingFang SC', Arial, sans-serif;
+}
 .container {
   padding-right: 1.25rem;
   padding-left: 1.25rem;
