--- a/apps/happin-web/styles/globals.scss
+++ b/apps/happin-web/styles/globals.scss
@@ -9,31 +9,42 @@
 // components
 @import "styles/components";
 
+// scrollbar
+@import "styles/scrollbar";
+
 @font-face {
   font-family: proximanova;
   font-weight: 500;
   font-display: swap;
-  src: url("../public/fonts/proximanova/proximanova-semibold-webfont.woff2") format("woff2"),
-  url("../public/fonts/proximanova/proximanova-semibold-webfont.woff") format("woff")
+  src: url("../public/fonts/proximanova/proximanova-semibold-webfont.woff2")
+      format("woff2"),
+    url("../public/fonts/proximanova/proximanova-semibold-webfont.woff")
+      format("woff");
 }
 @font-face {
   font-family: proximanova;
   font-weight: 600;
   font-display: swap;
-  src: url("../public/fonts/proximanova/proximanova-bold-webfont.woff2") format("woff2"),
-  url("../public/fonts/proximanova/proximanova-bold-webfont.woff") format("woff")
+  src: url("../public/fonts/proximanova/proximanova-bold-webfont.woff2")
+      format("woff2"),
+    url("../public/fonts/proximanova/proximanova-bold-webfont.woff")
+      format("woff");
 }
 @font-face {
   font-family: proximanova;
   font-weight: 700;
   font-display: swap;
-  src: url("../public/fonts/proximanova/proximanova-extrabold-webfont.woff2") format("woff2"),
-  url("../public/fonts/proximanova/proximanova-extrabold-webfont.woff") format("woff")
+  src: url("../public/fonts/proximanova/proximanova-extrabold-webfont.woff2")
+      format("woff2"),
+    url("../public/fonts/proximanova/proximanova-extrabold-webfont.woff")
+      format("woff");
 }
 @font-face {
   font-family: proximanova;
   font-weight: 800;
   font-display: swap;
-  src: url("../public/fonts/proximanova/proximanova-black-webfont.woff2") format("woff2"),
-  url("../public/fonts/proximanova/proximanova-black-webfont.woff") format("woff")
+  src: url("../public/fonts/proximanova/proximanova-black-webfont.woff2")
+      format("woff2"),
+    url("../public/fonts/proximanova/proximanova-black-webfont.woff")
+      format("woff");
 }
