--- a/apps/happin-web/styles/globals.scss
+++ b/apps/happin-web/styles/globals.scss
@@ -8,9 +8,7 @@
 
 // components
 @import "styles/components";
-
-// scrollbar
-@import "styles/scrollbar";
+@import "styles/pages";
 
 @font-face {
   font-family: proximanova;
@@ -50,28 +48,28 @@
 }
 
 // Helvetica Neue
-@font-face {
-  font-family: "Helvetica Neue";
-  font-weight: 400;
-  font-display: swap;
-  src: url("../public/fonts/helvetica/helveticaneue.ttf") format("truetype"),
-    url("../public/fonts/helvetica/helveticaneue.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Helvetica Neue";
-  font-weight: 700;
-  font-display: swap;
-  src: url("../public/fonts/helvetica/Helvetica Neue LT 75 Bold.ttf")
-      format("truetype"),
-    url("../public/fonts/helvetica/Helvetica Neue LT 75 Bold.ttf")
-      format("truetype");
-}
-@font-face {
-  font-family: "Helvetica Neue";
-  font-weight: 900;
-  font-display: swap;
-  src: url("../public/fonts/helvetica/Helvetica Neue LT 97 Black Condensed.ttf")
-      format("truetype"),
-    url("../public/fonts/helvetica/Helvetica Neue LT 97 Black Condensed.ttf")
-      format("truetype");
-}
+//@font-face {
+//  font-family: "Helvetica Neue";
+//  font-weight: 400;
+//  font-display: swap;
+//  src: url("../public/fonts/helvetica/helveticaneue.ttf") format("truetype"),
+//    url("../public/fonts/helvetica/helveticaneue.ttf") format("truetype");
+//}
+//@font-face {
+//  font-family: "Helvetica Neue";
+//  font-weight: 700;
+//  font-display: swap;
+//  src: url("../public/fonts/helvetica/Helvetica Neue LT 75 Bold.ttf")
+//      format("truetype"),
+//    url("../public/fonts/helvetica/Helvetica Neue LT 75 Bold.ttf")
+//      format("truetype");
+//}
+//@font-face {
+//  font-family: "Helvetica Neue";
+//  font-weight: 900;
+//  font-display: swap;
+//  src: url("../public/fonts/helvetica/Helvetica Neue LT 97 Black Condensed.ttf")
+//      format("truetype"),
+//    url("../public/fonts/helvetica/Helvetica Neue LT 97 Black Condensed.ttf")
+//      format("truetype");
+//}
