--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -26,3 +26,40 @@
     margin-left: auto;
   }
 }
+
+.link-blue {
+  @apply text-blue-500 hover:text-blue-600 hover:underline transition;
+}
+.link-rose {
+  @apply text-rose-500 hover:text-rose-600 hover:underline transition;
+}
+.link-white {
+  @apply text-white underline hover:text-rose-500 transition;
+}
+
+.ellipsis-2 {
+  @include ellipsis(2)
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+@keyframes fade-scale {
+  0% {
+    transform: scale(.9);
+    transform-origin: right top;
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: right top;
+    opacity: 1;
+  }
+}
+.fade-scale-in {
+  animation-duration: .2s;
+  animation-fill-mode: both;
+  animation-name: fade-scale;
+  animation-timing-function: ease-out;
+}
