--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -64,3 +64,10 @@
   animation-name: fade-scale;
   animation-timing-function: ease-out;
 }
+
+@supports (bottom: env(safe-area-inset-bottom)){
+  .footer-action {
+    padding-bottom: constant(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+}
