--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -4,9 +4,18 @@
   @apply inline-flex p-1 font-medium text-gray-300 hover:text-white transition
 }
 .header__menu {
-  @apply flex items-center rounded-full border-2 border-solid border-gray-600 text-gray-500 py-1 pr-1 pl-3 cursor-pointer transition;
+  @apply flex items-center rounded-full border-2 border-solid border-gray-800 text-gray-500 py-1 pr-1 pl-3 cursor-pointer transition;
+  &:hover, &.active {
+    @apply text-gray-300 bg-gray-800
+  }
+}
+.header__menu-dropdown {
+  @apply absolute z-50 w-52 mt-2 right-0 px-2 bg-gray-900 rounded-lg focus:outline-none origin-top-right;
+}
+.header__menu-link {
+  @apply text-white flex rounded-md items-center w-full px-2 py-2 my-1 text-sm transition font-medium;
   &:hover {
-    @apply text-gray-300 bg-gray-600
+    @apply bg-gray-700
   }
 }
 .header__search {
@@ -22,6 +31,21 @@
     @apply bg-gray-900
   }
 }
+.fade-enter {
+  transition: all .1s cubic-bezier(0, 0, 0.2, 1);
+}
+.fade-enter-from, .fade-leave-to {
+  opacity: 0;
+  transform: scale(.95);
+}
+.fade-enter-to, .fade-leave-from {
+  opacity: 1;
+  transform: scale(1);
+}
+.fade-leave {
+  transition: all .075s cubic-bezier(0.4, 0, 1, 1);
+}
+
 
 // Event Details
 .event-details__page{
