--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -1,7 +1,7 @@
 @import 'mixin';
 // Header
 .header__link {
-  @apply hidden sm:inline-flex p-1 font-medium text-gray-300 hover:text-white transition
+  @apply hidden sm:inline-flex text-sm p-1 font-medium text-gray-300 hover:text-white transition
 }
 .header__menu {
   @apply flex items-center rounded-full border-2 border-solid border-gray-800 text-gray-500 py-1 pr-1 pl-3 cursor-pointer transition;
@@ -10,7 +10,7 @@
   }
 }
 .header__menu-dropdown {
-  @apply absolute z-50 w-52 mt-2 right-0 px-2 bg-gray-900 rounded-lg focus:outline-none origin-top-right;
+  @apply absolute z-50 w-52 mt-2 px-2 bg-gray-900 rounded-lg focus:outline-none;
 }
 .header__menu-link {
   @apply text-white flex rounded-md items-center w-full px-2 py-2 my-1 text-sm transition font-medium;
@@ -21,6 +21,9 @@
 .header__search {
   @apply relative hidden sm:flex items-center w-full text-gray-500 focus-within:text-gray-300;
   max-width: 268px;
+  @media (min-width: 1280px) {
+    max-width: 360px;
+  }
 }
 .header__search-input {
   @apply block w-full pl-10 pr-3 py-2 rounded-full border-2 border-solid border-gray-800 bg-transparent text-white transition placeholder-gray-400;
@@ -30,6 +33,9 @@
   &:focus {
     @apply bg-gray-900
   }
+}
+.header__phone-search {
+  @apply block w-full px-3 py-3 border-0 bg-gray-900 text-white transition placeholder-gray-400;
 }
 .fade-enter {
   transition: all .1s cubic-bezier(0, 0, 0.2, 1);
@@ -80,7 +86,7 @@
     @apply text-rose-500 bg-gray-700
   }
   &.active {
-    @apply bg-gray-800
+    @apply bg-gray-700
   }
 }
 .event-details__side-vip {
