--- a/apps/happin-web/styles/components.scss
+++ b/apps/happin-web/styles/components.scss
@@ -192,12 +192,12 @@ button {
 }
 
 .btn-light {
-  @apply bg-gray-100;
+  @apply bg-gray-100 text-gray-900;
   &:hover {
-    @apply bg-gray-200
+    @apply bg-gray-300
   }
   &:active {
-    @apply bg-gray-300
+    @apply bg-gray-400
   }
   &.disabled, &:disabled {
     @apply bg-gray-100 text-gray-300;
@@ -211,6 +211,15 @@ button {
     @apply block w-full px-9 py-2 border-2 border-solid border-gray-600 rounded-lg bg-transparent text-white text-center transition placeholder-gray-400;
     &:focus {
       @apply bg-gray-900
+    }
+  }
+  &--sm {
+    @apply w-24;
+    input {
+      @apply px-7 py-1 text-sm;
+    }
+    .number-input-button {
+      @apply w-7 text-sm
     }
   }
   &:hover {
