--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -274,3 +274,23 @@
     max-height: 320px;
   }
 }
+
+// Payment
+.payment--cart {
+  @apply md:ml-6 lg:ml-8 mt-5 md:mt-0;
+  width: 100%;
+  @media (min-width: 768px) {
+    width: 360px;
+  }
+  @media (min-width: 900px) {
+    width: 450px;
+  }
+}
+.payment-currency-select {
+  @apply block w-full py-2 pl-3 pr-9 h-11 bg-gray-700 focus:bg-gray-600 rounded-lg focus:outline-none font-medium text-sm cursor-pointer appearance-none bg-no-repeat;
+  background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+  background-position: right .5rem center;
+  background-size: 1.5em 1.5em;
+  color-adjust:exact
+}
+
