--- a/apps/happin-web/styles/globals.scss
+++ b/apps/happin-web/styles/globals.scss
@@ -48,6 +48,15 @@
       format("woff");
 }
 
+.StripeElement--webkit-autofill {
+  background: transparent !important;
+}
+
+.StripeElement {
+  width: 100%;
+  padding: 11px 15px 11px 0;
+}
+
 // Helvetica Neue
 //@font-face {
 //  font-family: "Helvetica Neue";
