--- a/apps/happin-web/components/page_components/PaymentPageComponents/StripeStyles.module.css
+++ b/apps/happin-web/components/page_components/PaymentPageComponents/StripeStyles.module.css
@@ -1,5 +1,5 @@
-/*   
-  @keyframes fade {
+  
+/*   @keyframes fade {
     from {
       opacity: 0;
       transform: scale3D(0.95, 0.95, 0.95);
@@ -8,7 +8,7 @@
       opacity: 1;
       transform: scale3D(1, 1, 1);
     }
-  }
+  } */
   
   .FormGroup {
     margin: 0 0 20px;
@@ -28,10 +28,7 @@
     align-items: center;
     margin-left: 15px;
   }
-  
-  .FormRow:first-child {
-    border-top: none;
-  }
+
   
   .FormRowLabel {
     width: 15%;
@@ -43,16 +40,16 @@
     white-space: nowrap;
   }
   
-  @keyframes void-animation-out {
+/*   @keyframes void-animation-out {
     0%,
     to {
       opacity: 1;
     }
-  }
+  } */
   .FormRowInput:-webkit-autofill {
     -webkit-text-fill-color: #fff;
     transition: background-color 100000000s;
-    animation: 1ms void-animation-out;
+   /*  animation: 1ms void-animation-out; */
   }
   
   .FormRowInput {
@@ -61,16 +58,11 @@
     padding: 11px 15px 11px 0;
     color: #fff;
     background-color: transparent;
-    animation: 1ms void-animation-out;
+   /*  animation: 1ms void-animation-out; */
   }
   
   .FormRowInput::placeholder {
     color: #87bbfd;
-  }
-  
-  .StripeElement--webkit-autofill {
-    color: white !important;
-    background: transparent !important;
   }
   
   .ErrorMessage {
@@ -82,14 +74,14 @@
     width: 100%;
     transform: translateY(-15px);
     opacity: 0;
-    animation: fade 150ms ease-out;
+    /* animation: fade 150ms ease-out;
     animation-delay: 50ms;
-    animation-fill-mode: forwards;
-    will-change: opacity, transform;
+    animation-fill-mode: forwards;*/
+    will-change: opacity, transform; 
   }
   
   .ErrorMessage svg {
     margin-right: 10px;
-  } */
+  }
   
   
