--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -136,7 +136,7 @@
 
 // Check out
 .checkout__page {
-  @apply relative flex-1 h-0 bg-black text-white overflow-hidden;
+  @apply relative flex-1 h-0 bg-black text-white overflow-y-auto md:overflow-hidden;
 }
 .checkout__container {
   max-width: 600px;
