--- a/apps/happin-web/styles/components.scss
+++ b/apps/happin-web/styles/components.scss
@@ -303,8 +303,36 @@ textarea.form-field {
   max-width: 600px;
 }
 .tickets-cover {
-  @apply relative w-full bg-white;
-  height: 220px;
-  -webkit-mask: radial-gradient( circle at 66.6%, red 2px, transparent 0) 50% 50% / 100% 10px, radial-gradient(circle at 10px, transparent 10px, red 0) -10px / 100% 30px;
-  -webkit-mask-composite: xor;
+  @apply relative w-full bg-white rounded-lg overflow-hidden;
+
+  @media (min-width: 640px) {
+    border-radius: 0;
+    height: 220px;
+    -webkit-mask: radial-gradient( circle at 66.6%, red 2px, transparent 0) 50% 50% / 100% 10px, radial-gradient(circle at 10px, transparent 10px, red 0) -10px / 100% 30px;
+    -webkit-mask-composite: xor;
+  }
+}
+.tickets-cover__info {
+  @apply relative flex items-center sm:w-2/3 sm:h-full px-5 sm:pl-8 sm:pr-5 py-4;
+  border-bottom: 4px dotted #000;
+  &:before, &:after {
+    @apply absolute rounded-full bg-black;
+    content: '';
+    width: 27px;
+    height: 27px;
+    bottom: -15px;
+    z-index: 1;
+  }
+  &:before {
+    left: -15px;
+  }
+  &:after {
+    right: -15px;
+  }
+  @media (min-width: 640px) {
+    border-bottom: none;
+  }
+}
+.tickets-cover__qrcode {
+  @apply flex items-center justify-center sm:w-1/3 sm:h-full px-5 sm:pl-5 sm:pr-7 pb-5 pt-4 sm:py-0;
 }
