--- a/apps/sso/styles/pages.scss
+++ b/apps/sso/styles/pages.scss
@@ -42,6 +42,7 @@
   width: calc(100% - 40px);
   min-height: 600px;
   max-width: 500px;
+  margin-bottom: 80px;
   padding: 40px 30px 30px;
 }
 .login-close {
