--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -150,7 +150,7 @@
   }
 }
 .checkout__head-tab {
-  @apply relative px-1 py-3 sm:py-4 text-sm sm:text-base font-semibold text-gray-400 mr-4 sm:mr-5 cursor-pointer transition;
+  @apply relative px-1 py-3 sm:py-4 text-sm sm:text-base font-semibold text-gray-400 mr-4 sm:mr-5 cursor-pointer transition whitespace-nowrap;
   &:after {
     content: '';
     @apply absolute left-0 right-0 bottom-0 h-0 bg-white transition;
