--- a/apps/happin-web/styles/reset.scss
+++ b/apps/happin-web/styles/reset.scss
@@ -3,6 +3,26 @@ html {
 }
 body {
   -webkit-tap-highlight-color: transparent;
+  @media (min-width: 640px) {
+    &::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(#fff, 0.2);
+      border: 2px solid transparent;
+      border-radius: 10px;
+      margin-right: 10px;
+      background-clip: padding-box;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(#fff, 0.3);
+    }
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+      width: 10px;
+    }
+  }
 }
 a {
   cursor: pointer;
