--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -28,6 +28,15 @@
   }
 }
 
+// Common Body
+.common__body {
+  @apply relative text-white overflow-hidden z-0;
+  height: calc(100vh - 64px);
+  @media (min-width: 640px) {
+    height: calc(100vh - 80px);
+  }
+}
+
 .link-blue {
   @apply text-blue-500 hover:text-blue-600 hover:underline transition;
 }
