--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -86,6 +86,9 @@
   @media (min-width: 640px) {
     height: calc(100vh - 80px);
   }
+  .in-app & {
+    height: 100vh;
+  }
 }
 .event-details__container {
   @apply w-full px-4 sm:px-8 md:px-10 lg:px-14 mx-auto lg:m-0;
@@ -140,10 +143,13 @@
 
 // Check out
 .checkout__page {
-  @apply relative bg-black text-white overflow-x-hidden z-0 sm:h-screen;
-  //@media (min-width: 640px) {
-  //  height: calc(100vh - 80px);
-  //}
+  @apply relative bg-black text-white overflow-x-hidden z-0;
+  @media (min-width: 640px) {
+    height: calc(100vh - 80px);
+  }
+  .in-app & {
+    @apply sm:h-screen
+  }
 }
 .checkout__container {
   max-width: 600px;
@@ -364,14 +370,14 @@
     right: -400px;
   }
   @media (min-width: 1024px) {
-    width: 800px;
-    height: 800px;
+    width: 750px;
+    height: 750px;
     right: -500px;
   }
   @media (min-width: 1280px) {
-    width: 1000px;
-    height: 1000px;
-    right: -600px;
+    width: 850px;
+    height: 850px;
+    right: -550px;
   }
 }
 .home__color-purple {
