--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -81,19 +81,12 @@
 
 // Event Details
 .event-details__page{
-  @apply relative text-white z-0;
-  height: calc(100vh - 64px);
-  @media (min-width: 640px) {
-    height: calc(100vh - 80px);
-  }
-  .in-app & {
-    height: 100vh;
-  }
+  @apply relative flex-1 h-0 text-white z-0;
 }
 .event-details__container {
-  @apply w-full sm:px-8 md:px-10 lg:px-14 mx-auto lg:m-0;
-  padding-right: 4.5rem;
-  padding-left: 3.5rem;
+  @apply w-full px-4 sm:px-8 md:px-10 lg:px-14 mx-auto lg:m-0;
+  //padding-right: 4.5rem;
+  //padding-left: 3.5rem;
   @media (min-width: 640px) {
     max-width: 720px;
   }
@@ -145,17 +138,10 @@
 
 // Check out
 .checkout__page {
-  @apply relative bg-black text-white overflow-x-hidden z-0;
-  @media (min-width: 640px) {
-    height: calc(100vh - 80px);
-  }
-  .in-app & {
-    @apply sm:h-screen
-  }
+  @apply relative flex-1 h-0 text-white overflow-x-hidden z-0;
 }
 .checkout__container {
   max-width: 600px;
-  padding-top: 44px;
   padding-bottom: 68px;
   @media (min-width: 640px) {
     padding: 0;
@@ -289,7 +275,7 @@
 }
 .checkout__cart-list {
   @apply p-1 overflow-y-auto;
-  max-height: calc(100vh - 252px);
+  max-height: calc(100vh - 208px);
   height: 100vh;
   @media (min-width: 640px) {
     max-height: 320px;
