modify How Happin Works images

--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -391,24 +391,23 @@
 }
 .home__fade-enter{
   opacity: 0;
-  transform: translateY(20px);
+  transform: scale(.95);
+  transition: all .4s cubic-bezier(0, 0, 0.2, 1);
 }
 .home__fade-exit{
   opacity: 1;
-  transform: translateY(0);
+  transform: scale(1);
+  transition: all .4s cubic-bezier(0, 0, 0.2, 1);
 }
 .home__fade-enter-active{
   opacity: 1;
-  transform: translateY(0);
+  transform: scale(1);
 }
 .home__fade-exit-active{
   opacity: 0;
-  transform: translateY(-20px);
+  transform: scale(.95);
 }
-.home__fade-enter-active,
-.home__fade-exit-active{
-  transition: opacity .4s cubic-bezier(0.4, 0, 0.2, 1), transform .4s cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 .home-section-build {
   left: 0;
   width: 80%;
