--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -457,6 +457,11 @@
   }
 }
 
+#scroll-body::-webkit-scrollbar {
+  width: 0 !important;  /* Remove scrollbar space */
+  background: transparent !important;  /* Optional: just make scrollbar invisible */
+}
+
 
 // Footer
 .foot-menu {
