--- a/apps/happin-web/styles/components.scss
+++ b/apps/happin-web/styles/components.scss
@@ -204,6 +204,19 @@ button {
   }
 }
 
+.btn-dark-light {
+  @apply bg-gray-700 text-gray-200;
+  &:hover {
+    @apply bg-gray-600
+  }
+  &:active {
+    @apply bg-gray-500
+  }
+  &.disabled, &:disabled {
+    @apply bg-gray-100 text-gray-300;
+  }
+}
+
 // Select counter
 .number-input {
   @apply relative w-36;
