--- a/apps/box-office/styles/public.scss
+++ b/apps/box-office/styles/public.scss
@@ -1,3 +1,146 @@
+@import 'mixin';
+// 凡是大标题都用这个class，字体粗细有:
+// 500: font-medium
+// 600: font-semibold
+// 700: font-bold
+// 800: font-extrabold
+.black-title {
+  font-family: proximanova, 'Helvetica Neue', 'PingFang SC', Arial, sans-serif;
+}
+
+// 页面基础包裹容器
+.container {
+  padding-right: 1.25rem;
+  padding-left: 1.25rem;
+  @media (min-width: 640px) {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+  @media (min-width: 768px) {
+    padding-right: 2rem;
+    padding-left: 2rem;
+  }
+  @media (min-width: 1280px) {
+    width: 100%;
+    max-width: 1280px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+// Layout
+.main-app {
+  @apply flex flex-col h-screen;
+  &.home-page {
+    @apply h-auto
+  }
+}
+.header {
+  .home-page &{
+    @apply sticky top-0 z-10;
+  }
+}
+.common__body {
+  @apply relative flex-1 h-0 text-white overflow-x-hidden z-0;
+}
+
+.link-blue {
+  @apply text-blue-500 hover:text-blue-600 hover:underline transition;
+}
+.link-rose {
+  @apply text-rose-500 hover:text-rose-600 hover:underline transition;
+}
+.link-white {
+  @apply text-white underline hover:text-rose-500 transition;
+}
+.link-normal {
+  @apply hover:underline hover:text-rose-500 transition;
+}
+
+.ellipsis-2 {
+  @include ellipsis(2)
+}
+.web-scroll {
+  @media (min-width: 640px) {
+    @include dark-scroll
+  }
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.divider-words {
+  @apply relative font-semibold leading-none text-center my-5 text-sm sm:text-base;
+  &:before, &:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    transform: translateY(-50%);
+  }
+  &:before {
+    right: 55%;
+    left: 0;
+  }
+  &:after {
+    right: 0;
+    left: 55%;
+  }
+}
+
+@keyframes fade-scale {
+  0% {
+    transform: scale(.9);
+    transform-origin: right top;
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: right top;
+    opacity: 1;
+  }
+}
+@keyframes fade-background {
+  0% {
+    background-color: rgba(0,0,0,0);
+  }
+  100% {
+    background-color: rgba(0,0,0,.7);
+  }
+}
+@keyframes fade-in-up {
+  0% {
+    transform: translateY(30px);
+    opacity: .75;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.fade-scale-in {
+  animation-duration: .3s;
+  animation-fill-mode: both;
+  animation-name: fade-scale;
+  animation-timing-function: ease-out;
+}
+.fade-background {
+  animation-duration: .1s;
+  animation-fill-mode: both;
+  animation-name: fade-background;
+}
+.fade-in-up {
+  animation-duration: .1s;
+  animation-fill-mode: both;
+  animation-name: fade-in-up;
+}
+@supports (bottom: env(safe-area-inset-bottom)){
+  .footer-action {
+    padding-bottom: constant(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+}
+
 .black-title {
   font-family: proximanova, 'Helvetica Neue', 'PingFang SC', Arial, sans-serif;
 }
