--- a/apps/box-office/styles/reset.scss
+++ b/apps/box-office/styles/reset.scss
@@ -1,4 +1,65 @@
-body {
-  background-color: #F7F8FA;
-  -webkit-tap-highlight-color: transparent;
+html {
+  background-color: #fff;
 }
+body {
+  -webkit-tap-highlight-color: transparent;
+  @media (min-width: 640px) {
+    &::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(#fff, 0.2);
+      border: 2px solid transparent;
+      border-radius: 10px;
+      margin-right: 10px;
+      background-clip: padding-box;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(#fff, 0.3);
+    }
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+      width: 10px;
+    }
+  }
+}
+a {
+  cursor: pointer;
+}
+
+::selection {
+  background: theme('colors.rose.500');
+  color: #fff;
+}
+
+::-moz-selection {
+  background: theme('colors.rose.500');
+  color: #fff;
+}
+
+::-webkit-selection {
+  background: theme('colors.rose.500');
+  color: #fff;
+}
+
+input {
+  appearance: none;
+  outline: none;
+  &:focus {
+    outline: none;
+  }
+}
+
+//*, ::before, ::after {
+//  --tw-translate-x: 0;
+//  --tw-translate-y: 0;
+//  --tw-rotate: 0;
+//  --tw-skew-x: 0;
+//  --tw-skew-y: 0;
+//  --tw-scale-x: 1;
+//  --tw-scale-y: 1;
+//  --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+//  --tw-border-opacity: 1;
+//}
+
