--- a/apps/box-office/styles/pages.scss
+++ b/apps/box-office/styles/pages.scss
@@ -99,6 +99,44 @@
 //.home__banner {
 //  background: url("../public/images/home-banner.png") center top no-repeat;
 //}
+
+.home__page__button {
+  margin-top: 8rem;
+  margin-bottom: 2rem;
+  background-color: #FFFFFF;
+  border: 1px solid rgb(209,213,219);
+  border-radius: 1rem;
+  box-sizing: border-box;
+  color: #111827;
+  font-family: "Inter var",ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: .875rem;
+  font-weight: 600;
+  line-height: 1.25rem;
+  padding: .75rem 1rem;
+  text-align: center;
+  text-decoration: none #D1D5DB solid;
+  text-decoration-thickness: auto;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.home__page__button:hover {
+  background-color: rgb(249,250,251);
+}
+
+.home__page__button:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.home__page__button:focus-visible {
+  box-shadow: none;
+}
+
+
 .right-circle {
   width: 360px;
   height: 360px;
